--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,13 +4,23 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="TTS Companion - by mikebald" Height="275" Width="380" ResizeMode="NoResize" Closing="Window_Closing" Icon="app.ico" SizeToContent="WidthAndHeight">
+        Title="TTS Companion - by mikebald" Height="275" Width="392" ResizeMode="NoResize" Closing="Window_Closing" Icon="app.ico" SizeToContent="WidthAndHeight">
 
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="_Playback Device" Name="menuPlayback">
             </MenuItem>
             <MenuItem Header="_Keybind Enabled" Name="menuKeybindEnabled" Click="menuKeybindEnable" />
+            <MenuItem Header="_Change Voice" Name="menuVoiceChange">
+                <MenuItem Header="Default" Name="menuVoiceDefault" Click="menu_DefaultVoice_Click" />
+                <Separator />
+                <MenuItem Header="Asian - F" Name="menuVoiceAsianF" Click="menu_OtherVoice_Click" />
+                <MenuItem Header="Asian - M" Name="menuVoiceAsianM" Click="menu_OtherVoice_Click" />
+                <MenuItem Header="Aussie - F" Name="menuVoiceAussieF" Click="menu_OtherVoice_Click" />
+                <MenuItem Header="Aussie - M" Name="menuVoiceAussieM" Click="menu_OtherVoice_Click" />
+                <MenuItem Header="British - F" Name="menuVoiceBritishF" Click="menu_OtherVoice_Click" />
+                <MenuItem Header="British - M" Name="menuVoiceBritishM" Click="menu_OtherVoice_Click" />
+            </MenuItem>
         </Menu>
 
         <Grid Margin="10" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
@@ -39,7 +49,7 @@
                 Content="Speak"
                 Click="SpeakString_OnClick"/>
 
-            <TextBox x:Name="txtSpeech" Grid.ColumnSpan="3" Grid.Row="0" Grid.Column="1" Width="260" Height="52" Margin="3,3,3,0" TextWrapping="WrapWithOverflow" VerticalAlignment="Top" KeyDown="txtSpeech_KeyDown"/>
+            <TextBox x:Name="txtSpeech" Grid.ColumnSpan="3" Grid.Row="0" Grid.Column="1" Width="260" Height="52" Margin="3,3,3,0" TextWrapping="WrapWithOverflow" VerticalAlignment="Top" KeyDown="txtSpeech_KeyDown" SpellCheck.IsEnabled="True"/>
 
             <Button Grid.Row="1" Grid.Column="0"
                 Margin="2,2,3,2" Padding="3"
@@ -78,7 +88,7 @@
 
             <Button Grid.Row="2" Grid.Column="3"
                 Margin="3,2,2,2" Padding="3"
-                Content="Good Evening"
+                Content="Good Evening All"
                 Click="Speak_Content_OnClick"/>
 
             <Button Grid.Row="4" Grid.Column="0"
@@ -93,12 +103,12 @@
 
             <Button Grid.Row="4" Grid.Column="2"
                 Margin="3,2" Padding="3"
-                Content=""
+                Content="Door 50%"
                 Click="Speak_Content_OnClick"/>
 
             <Button Grid.Row="4" Grid.Column="3"
                 Margin="3,2,2,2" Padding="3"
-                Content="Share dailies Please"
+                Content="Anyone have 9 resources?"
                 Click="Speak_Content_OnClick"/>
 
             <Button Grid.Row="5" Grid.Column="0"
@@ -113,7 +123,7 @@
 
             <Button Grid.Row="5" Grid.Column="2"
                 Margin="3,2" Padding="3"
-                Content=""
+                Content="Door 20%"
                 Click="Speak_Content_OnClick"/>
 
             <Button Grid.Row="5" Grid.Column="3"
@@ -128,12 +138,12 @@
 
             <Button Grid.Row="6" Grid.Column="1"
                 Margin="3,2" Padding="3"
-                Content=""
+                Content="Healer Down"
                 Click="Speak_Content_OnClick"/>
 
             <Button Grid.Row="6" Grid.Column="2"
                 Margin="3,2" Padding="3"
-                Content=""
+                Content="Door down"
                 Click="Speak_Content_OnClick"/>
 
             <Button Grid.Row="6" Grid.Column="3"
